lab1/Test/L1-A-0-44.cmm
float tdtghbXvX ( ) {
  float sTfuxbD [ 1286325968 ] [ 1930703970 ] , CQdTTqWjXJ 
    = ! ! D = \f , u6 ;
  struct XJ {
  }jT2mW_7Rqr1bEajOj6F [ 332172006 ] [ 1840169714 
    ] [ 1300522637 ] [ 584681888 ] , gYoiik [ 1595253362 
    ] [ 38446824 ] &[ 1247271822 ] = ZEN ( ) . a3FKry47u7fSUUFQKdp 
    [ Z ] [ ERY61LKfwg0oXT ] . F_L9qqsz4vR8d / kgVEBXJykn_OoWJY2 
    / w7MjheVoWoTyDQvj * xh7zQB > zhSEGPq78T8Uk != pgzHELl 
    == Jc7w7N < az7XEwFbW > Z6D >= Iy == sx6SbO2 >= IG 
    >= uNxPwWYpqzDX7fzS > QxqPTn > JZ != OVF == wHy9hH82jGWzj3HMqH 
    != zzhm2CIGXwb > PSLlbYNI2rQkiF && HehpEuwOxZIK && 
    MOnBAKumCJhPkr2_ && iF3 ;
  int D3DOPXw4X4p7mMkoS = - yifNfyV_y * SYwVqbJuluz 
    * UY6itdT6siXcavY / BerFQ_elWge / GhNOrA1V4JVj * brA8GhI1MJJG5c4bNHd 
    || NPcOcE2gj || SU4zE , gJZT7 = mrgQtTf ;
  GocNCf9BpjnBAaPl_DyA ( aV_ZpN4BgxzWq4kG [ ! ! yqvLVZ4ndybjkX 
    * wED * yLE * pFrEYiYYelc && YoDKV ] [ ( qyqbsbH = 
    BEgSmcXj ) [ ifsf4XGXVcS7Yg ] * GD6kFU6f7 * arzb2L91HD1aH7oYzLs 
    - ForEwHuEKW5udYX < Ioaa5D < vVlzir0idCEUs2FKCLAb 
    >= Z2KFKMkaxSDc == HBW >= C4mflHuziCaZO >= SeSDW <= 
    xlxL < A3xXAturoMiNRmy6p == kZekfvW <= JqfUlp > DB 
    < x == F85kBj4SZdrrLQJsnHVJ < bUeFYl != sFyB != q1z2PXjDoVtQiLFKzr 
    > KDv8N6X != Hk && nYxtZEM2Eys_ && DQw7SRUGimO_3kw 
    ] = ( ! nJbgv < svZYDDiSUJ ) [ EptB0_Q134lMcXf5D ] 
    = PVkLE3TtD3SoqWyEI1 , - 1290063950 + xzWyekoWEu >= 
    fWW &<= ctH1LF4hzIcu ) [ ! _Q75j27j02e1gL ( ! BSg5pjbnSHuae 
    = lpHy , z5LAbG7ca ) + ! ! AKaHc39awJz1M1NaVIe / ECMzGdFXA25eyCHBiWbl 
    / ScG_z4OF / QHJEdRpM / qzAZi91FLiBeEitx * iA_JkYJyOE 
    / r7FxSp3u / Ed - pJCX7aq27MauB ( ) * ueWUJ * ipzJE67xkw1XVtZaPd 
    > - - D0F17 * fnBFPzDbqwr > - ! iBzq / HpcMOIr8RR 
    / ZCaa * NR_5gE8H2rEO / pGPvl - mK9W8z534 + b + LrQnARf 
    - FovBCl4I9u0Gx67P - E6EZPjb2eXpH + ndgE == ( - w0Gi 
    = O7qXBPO6TQno4WzFL4g1 ) + KJlN1GLtvUw + iJznwUYJqK9FA2Ige 
    - MnsQztw8E1l - TIXDp03eS <= - tD_Fho ( yWcHoobTMlF 
    ) . EvqADnmpSdC_ / QL / Ck7XYG3pk0254SYDmFE / T4LERboSvlrleDQW 
    / F3mHTb8qSwXQJhEO7P * diFPZDUbt * s0n - oqIK5QQ__CITAJ7 
    + levbawERa + j_2 + Fhi6mYS58 + R0QfRHm0N8bESROI1k 
    ] = ( - ( - SY1IW * km1UQ - DbaMTvqIPHILRIvo11 - hW9GuiH 
    != UuI4 == a6k >= QldeYiPe6UxRZ <= ohbMlM3e0AsYvcVYSH 
    < c > yZGZd3KGPg >= T4oJq97V <= VjrxWDWHiPVEb5bW1 
    ) = - LqywlKV8f3C0 * IjiqjF1HlAuPn / wjGWX - UCIDVD7 
    + dawOyTJ_E - RPPExs5FE9_vVTqOwZz != YWHyy7 != v375OIV9 
    < iNBeBu_3ApSOEkoe != VnRTJhkWN1yt9R < dZnp >= oSPTkvQ0eRNxZ5W 
    > ngiyA >= XRwh_Q >= maYukt != WwvZhrCnCT <= uZrddhLjHgJ6sQ3lwuJd 
    >= XBClj73RDATzlPPMlW7N || yZo ) . uQUISKGJc8X5pBJ 
    / ! rmA1lHXV ( ) [ tzGe2a1EDo5tQO27 ] . REUMstw8sl88h7MzYr 
    [ s9Ns2SfRy8eADGZOF ] . OFCBlbI_xhsY_MVR81 [ h74w5eYZT 
    ] / TjPwKDDVv9 ( ) / H2IiehHzcMkp8kE5OhMu ( cEQTTEEgjGU8ZC_ 
    ) [ adB9nMzx5eVmz ] < YAYp0XAPc ( uhrklBmwQytuuf ) 
    [ Gl0ssnsfb ] - o6Wo < 243464950.1537416479 / WnKdPhWzAthzaYZW8m 
    * iAvsX97fhemZA + IBITVuJS9U != - - RijhUvI9 * o7RkbFeC7K 
    * INoBs_7Yv8Xq * KDFGSBgI8 * Y4u && - QIb [ OSB5MzRPq8K0HB72iVO 
    ] / p26FG / x * Pala38Xf1s5NL2hy / oKOD4H / Z2Ws7HY1TA1d 
    * bPsi5YX * p3 / zRsfWS2ZeWF4oNcvWEdB / NP2x7KGPGXt 
    + YoGp6cJfBYfx2T1Dhi + JewMEAPvSlU + ura8hPFK - c 
    + EFVYgRg5Aec1tJBrh6sq - HCsXB351J + KK8LI < dVa != 
    nlBS7Z9PgrO == CSsTrziVhaeKhAk ;
{
    int UivNcODdAh ;
    int e [ 399031711 ] ;
    float g4s2bZOXal53 [ 2121222210 ] [ 214552268 
      ] [ 1793957324 ] [ 2127640526 ] [ 776086290 ] , r3 
      ;
    struct {
    }p5rQdF38q2jvPtVhG ;
  }  return - ! ! mlhXlAFncRTY = jBki ( pFWV8L_nCF2Kl 
    ) * h7bsxK_dZFYryYa == pSUD2cW75guGBkID_hp || zocs5K 
    ;
}
